<resources>
    <string name="app_name">TS Get PID Packet</string>
    <string name="main_tv_file_name">Unknow</string>
    <string name="main_tv_show_popupwindow">Choose</string>
    <string name="main_pickerview_title">Select PID and TableId</string>
    <string name="main_tv_pid">PID : </string>
    <string name="main_tv_tableid">tableID : </string>
    <string name="main_btn_parse_section">Section</string>
    <string name="main_tv_packet_length">PacketLength :  , PacketStartPosition : </string>
    <string name="main_tv_packet_length_result">PacketLength : %1$d , PacketStartPosition : %2$d</string>
    <string name="main_tv_packet_number">PacketNum : </string>
    <string name="main_tv_packet_number_result">PacketNum : %1$d</string>
</resources>
