<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_title_rl_height"
        android:background="@color/colorRed">

        <ImageView
            android:id="@+id/iv_goback"
            android:layout_width="@dimen/main_goback_iv_width"
            android:layout_height="@dimen/main_goback_iv_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_micro"
            android:padding="@dimen/padding_micro_super"
            android:src="@drawable/goback_white" />

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="@dimen/main_file_name_tv_width"
            android:layout_height="@dimen/main_file_name_tv_height"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_tv_file_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_micro" />

        <TextView
            android:id="@+id/tv_show_popupwindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_micro"
            android:padding="@dimen/padding_micro_super"
            android:text="@string/main_tv_show_popupwindow"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_micro_super" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_section_rl_height">

        <LinearLayout
            android:id="@+id/ll_open_picker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_micro"
            android:layout_toLeftOf="@+id/btn_parse_section"
            android:gravity="center">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_tv_PID"/>

                <TextView
                    android:id="@+id/tv_pid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_tv_tableID"/>

                <TextView
                    android:id="@+id/tv_table_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_parse_section"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/main_btn_parse_section"/>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_packet_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_tv_packet_length" />

            <TextView
                android:id="@+id/tv_packet_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_tv_packet_number" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
